--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,5 +17,9 @@
     "jsx": "react-jsx"
   },
   "include": ["**/*.ts", "src", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "baseUrl": "./",
+  "paths": {
+    "@/*": ["src/*"]
+  }
 }
