--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,10 @@
-PORT=3000
+PORT=3001
+
+NODE_ENV=development
+APP_NAME=my-project
+SERVER=development
+SECRET=j!89nKO5as&Js
+API_VERSION=v1
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -8,6 +14,3 @@ PORT=3000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
-
-JWT_SECRET_KEY=eyJhbGciOiJIUzI1NiJ9
-JWT_EXPIRED_TOKEN=3d
