--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,62 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "open-db": "npx prisma studio"
+    "dev": "./node_modules/nodemon/bin/nodemon.js --delay 2000ms",
+    "open-db": "npx prisma studio",
+    "generate-db": "npx prisma generate",
+    "start": "node .",
+    "start-watch": "nodemon --delay 5000ms --exec npm run start",
+    "build": "tsc",
+    "build-watch": "tsc -w",
+    "lint": "eslint . --ext .ts",
+    "prettier": "prettier --config .prettierrc --write ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "4.8.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "@prisma/client": "^4.8.1",
+    "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.18",
-    "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20",
-    "prisma": "^4.8.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.10.1",
+    "@types/sequelize": "^4.28.10",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "lint-staged": "^11.1.2",
+    "nodemon": "^2.0.13",
+    "prettier": "^2.4.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
+  },
+  "lint-staged": {
+    "*.+(ts)": "eslint --fix",
+    "*.+(ts|json|md)": "prettier --config .prettierrc --write ."
   }
 }
