--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "prettier": "prettier --config .prettierrc --write ."
   },
   "dependencies": {
-    "@prisma/client": "^4.8.1",
+    "@prisma/client": "4.8.1",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -52,6 +52,7 @@
     "lint-staged": "^11.1.2",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
+    "prisma": "4.8.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
